--- a/crm-employee-database-frontend-web/src/app/employee-create/employee-create.component.html
+++ b/crm-employee-database-frontend-web/src/app/employee-create/employee-create.component.html
@@ -1,23 +1,23 @@
 <h2>New Employee</h2>
-<form #newEmployeeForm="ngForm" (submit)="createNewEmployee(newEmployeeForm)">
+<form>
   <div class="form-group">
     <label for="oib">OIB</label>
-    <input type="text" class="form-control" id="oib">
+    <input type="text" class="form-control" name="oib" id="oib">
   </div>
 
   <div class="form-group">
     <label for="firstName">First Name</label>
-    <input type="text" class="form-control" id="firstName">
+    <input type="text" class="form-control" name="firstName" id="firstName">
   </div>
 
   <div class="form-group">
     <label for="lastName">Last Name</label>
-    <input type="text" class="form-control" id="lastName">
+    <input type="text" class="form-control" name="lastName" id="lastName">
   </div>
 
   <div class="form-group">
     <label for="email">Email</label>
-    <input type="text" class="form-control" id="email">
+    <input type="text" class="form-control" name="email" id="email">
   </div>
 
   <button type="submit" class="btn btn-success">Submit</button>
